--- a/index.html
+++ b/index.html
@@ -1,189 +1,123 @@
-<!doctypehtml> 
-<html lang=en>
-<meta content="width=device-width,initial-scale=1" name=viewport>
-<meta charset=UTF-8>
-
-<title></title>
-<meta property="og:type" content="fuckact.lol">
-<meta property="og:url" content="https://fuckact.lol">
-<meta property="og:title" content="fuckact.lol | home">
-<meta property="og:description" content="site home">
-<meta property="og:image" content="images/embed.png">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="shortcut icon" type="images/embed.png" href="favicon.ico" />
-    <link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css rel=stylesheet>
-    <link href=css/style.css rel=stylesheet>
-    <meta content=var(--bgColor) name=theme-color>
-    <style>
-        body {
-            cursor: url(images/cur.png), auto;
-        }
+<meta charset="UTF-8">
+<title>✟</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background: black;
+        overflow: hidden;
+        color: white;
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        text-align: center;
+    }
 
-        .cursor-trail {
-            position: absolute;
-            width: 8px;
-            height: 8px;
-            background-color: #0ef;
-            border-radius: 50%;
-            pointer-events: none;
-            animation: trailAnimation .5s ease-out forwards;
-        }
+    #snow-canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: -1;
+    }
 
-        @keyframes trailAnimation {
-            from {
-                transform: scale(1);
-                opacity: 1;
-            }
-            to {
-                transform: scale(0);
-                opacity: 0;
-            }
-        }
+    h1 {
+        font-size: 5rem;
+        margin: 0;
+        letter-spacing: 2px;
+        z-index: 10;
+    }
 
-        /* Modern button styles */
-        .modern-button {
-            display: inline-block;
-            margin: 20px auto;
-            padding: 10px 20px;
-            font-size: 16px;
-            color: white;
-            background-color: #007bff;
-            border: none;
-            border-radius: 5px;
-            text-align: center;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
-
-        .modern-button:hover {
-            background-color: #0056b3;
-            transform: scale(1.05);
-        }
-
-        .modern-button:focus {
-            outline: none;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-        }
-    </style>
+    h2 {
+        font-size: 2rem;
+        margin-top: 10px;
+        opacity: 0.7;
+        z-index: 10;
+    }
+</style>
 </head>
-
 <body>
-    <div class="background-video-container">
-        <video autoplay id="background-video" loop muted>
-            <source src="assets/vid.mp4" type="video/mp4">
-        </video>
-    </div>
-    <img alt="act" class="animated fast rubberBand" id="userPhoto" src="images/profile-picture.webp">
-    <h1 class="animated jello">act</h1>
-    <div class="animated delay-1s fadeInLeft" id="social-media-links">
-        <a class="social-icon" href="https://steamcommunity.com/id/vvfk/" target="_blank"><i class="fab fa-steam"></i></a>
-        <a class="social-icon" href="https://github.com/fuckact" target="_blank"><i class="fab fa-github"></i></a>
-        <a class="social-icon" href="https://www.roblox.com/users/5439464149/profile" target="_blank" title="Visit my Roblox Profile">
-            <img src="images/roblox-icon.png" alt="Roblox" style="width: 24px; height: 24px;">
-        </a>
-        <a class="social-icon" href="https://discord.gg/3uFbNubRc3" target="_blank" title="Discord Server">
-            <img src="images/discord-icon.png" alt="Discord" style="width: 24px; height: 24px;">
-        </a>
-    </div>
 
-    <!-- Centered container -->
-    <div class="centered-container">
-        <button class="modern-button" onclick="redirectToPage()">view my projects</button>
-        <a class="atrib">Built by Act 💸</a>
-    </div>
+<canvas id="snow-canvas"></canvas>
 
-    <audio autoplay id="background-audio" loop muted>
-        <source src="assets/aud4.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
+<!-- Your custom cursor + music scripts stay here -->
 
-    <script>
-        function redirectToPage() {
-            window.location.href = "https://fuckact.lol/projects"; // Replace with your page URL
+<h1>coming soon</h1>
+<h2>fuckact.lol</h2>
+
+<script>
+    const canvas = document.getElementById('snow-canvas');
+    const ctx = canvas.getContext('2d');
+
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    let flakes = [];
+
+    // Create snowflakes
+    for (let i = 0; i < 200; i++) {
+        flakes.push({
+            x: Math.random() * canvas.width,
+            y: Math.random() * canvas.height,
+            r: Math.random() * 3 + 1,
+            d: Math.random() + 1
+        });
+    }
+
+    function drawFlakes() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        ctx.fillStyle = "white";
+        ctx.beginPath();
+        for (let i = 0; i < flakes.length; i++) {
+            let f = flakes[i];
+            ctx.moveTo(f.x, f.y);
+            ctx.arc(f.x, f.y, f.r, 0, Math.PI * 2, true);
         }
+        ctx.fill();
+        moveFlakes();
+    }
 
-        window.onload = function() {
-            var audio = document.getElementById('background-audio');
-            var video = document.getElementById('background-video');
+    let angle = 0;
 
-            // Unmute both the audio and video after the page has loaded
-            setTimeout(function() {
-                audio.muted = false;
-                video.muted = true;
-                audio.volume = 0.1;
-            }, 3000); // 3-second delay to ensure proper unmuting
-        };
+    function moveFlakes() {
+        angle += 0.001;
+        for (let i = 0; i < flakes.length; i++) {
+            let f = flakes[i];
+            f.y += Math.pow(f.d, 2) * 0.3; 
+            f.x += Math.sin(angle) * 0.5;
 
-        // Fallback for user interaction (optional)
-        document.body.addEventListener('click', function() {
-            var audio = document.getElementById('background-audio');
-            if (audio.muted) {
-                audio.muted = false; // Unmute on click
-                audio.play();
+            if (f.y > canvas.height) {
+                flakes[i] = {
+                    x: Math.random() * canvas.width,
+                    y: 0,
+                    r: f.r,
+                    d: f.d
+                };
             }
-        });
-
-        // JavaScript to add cursor trail
-        const body = document.body;
-
-        // Function to create the trail effect
-        body.addEventListener('mousemove', function(event) {
-            let trail = document.createElement('div');
-            trail.classList.add('cursor-trail');
-            body.appendChild(trail);
-
-            // Position the trail element at the cursor position
-            trail.style.left = `${event.pageX - 6}px`; // Center the trail on the cursor
-            trail.style.top = `${event.pageY - 6}px`; // Center the trail on the cursor
-
-            // Remove the trail element after the animation ends
-            setTimeout(function() {
-                trail.remove();
-            }, 500); // Match this duration with the CSS animation duration
-        });
-    </script>
-    <script src="script.js"></script>
-
-    <style>
-        /* Centered container styling */
-        .centered-container {
-    position: absolute;
-    top: 35%; /* Adjusted to move the button closer */
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-
-        .modern-button {
-            display: inline-block;
-            margin-bottom: 10px;
-            padding: 10px 20px;
-            font-size: 16px;
-            color: rgb(0, 0, 0);
-            background-color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            text-align: center;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
         }
+    }
 
-        .modern-button:hover {
-            background-color: #0056b3;
-            transform: scale(1.05);
-        }
+    function animateSnow() {
+        drawFlakes();
+        requestAnimationFrame(animateSnow);
+    }
 
-        .modern-button:focus {
-            outline: none;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-        }
+    animateSnow();
 
-        .atrib {
-            color: white;
-            font-size: 14px;
-            display: block;
-        }
-    </style>
+    // Adjust canvas size on window resize
+    window.addEventListener("resize", () => {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+    });
+</script>
+
 </body>
-
+</html>
